# AI-BE-technical-assignment

./: .gitignore  README.md  app.py  logger_utils.py  pyproject.toml
src/: __init__.py  gpt.py  preprocess.py  processor.py  summarize.py  talent_table.py  test.py
static/: swagger.yaml
test/: test_preprocess.py  test_summarize.py
