[tool.poetry]
name = "searchright-technical-assignment"
version = "0.1.0"
description = ""
authors = ["Nuung <qlgks1@naver.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
openai = "^1.75.0"
mecab-python3 = "^1.0.10"
numpy = "^2.3.2"
scikit-learn = "^1.7.1"
dotenv = "^0.9.9"
flask = "^3.1.2"
mecab = "^0.996.11"
flask-swagger-ui = "^5.21.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
